# technicolor

./: .gitignore  Cargo.toml  Makefile  README.md  appveyor.yml
assets/: syntaxes-nl.pack  syntaxes-nonl.pack  themes.pack
assets/syntaxes/: ASP.sublime-syntax  AWK.sublime-syntax  ActionScript.sublime-syntax  AppleScript.sublime-syntax  AsciiDoc.sublime-syntax  Assembly-ARM.sublime-syntax  Assembly-x86.sublime-syntax  Bash-Builtin-Commands.sublime-syntax  Bash.sublime-syntax  Batch-File.sublime-syntax  Bibtex.sublime-syntax  C++.sublime-syntax  C.sublime-syntax  CSS.sublime-syntax  CSV.sublime-syntax  CSharp.sublime-syntax  Cabal.sublime-syntax  Camlp4.sublime-syntax  Cargo.sublime-syntax  Clojure.sublime-syntax  Crystal.sublime-syntax  D.sublime-syntax  Dart.sublime-syntax  Diff.sublime-syntax  Docker.sublime-syntax  DotENV.sublime-syntax  Elixir.sublime-syntax  Elm-Compile-Messages.sublime-syntax  Elm-Documentation.sublime-syntax  Elm.sublime-syntax  Erlang.sublime-syntax  FSharp.sublime-syntax  FStab.sublime-syntax  Fish.sublime-syntax  Git-Attributes.sublime-syntax  Git-Commit.sublime-syntax  Git-Common.sublime-syntax  Git-Config.sublime-syntax  Git-Ignore.sublime-syntax  Git-Link.sublime-syntax  (+98 more)
assets/themes/: 10-Percent-Too-Dull.tmTheme  1337.tmTheme  ANSI-Dark.tmTheme  ANSI-Light.tmTheme  Agila-Classic.tmTheme  Agila-Cobalt.tmTheme  Agila-Neon.tmTheme  Agila-Origin.tmTheme  Agola-Dark-X2.tmTheme  Agola-Dark.tmTheme  Agola-Expert-Class.tmTheme  Agola-Light.tmTheme  Agola-Nimbus.tmTheme  Atomic-DarkBlue.tmTheme  Atomic-DarkCyan.tmTheme  Atomic-Light-Hard.tmTheme  Atomic-Light-Soft.tmTheme  Atomic-NightOrange.tmTheme  Atomic-NightRed.tmTheme  Ayu-Dark.tmTheme  Ayu-Mirage.tmTheme  Base-16-Atlas.tmTheme  Base-16-Dark.tmTheme  Base-16-Eighties.tmTheme  Base-16-Flat.tmTheme  Base-16-Gruvbox-Dark-Hard.tmTheme  Base-16-Gruvbox-Dark-Medium.tmTheme  Base-16-Gruvbox-Dark-Pale.tmTheme  Base-16-Gruvbox-Dark-Soft.tmTheme  Base-16-Gruvbox-Light-Hard.tmTheme  Base-16-Gruvbox-Light-Medium.tmTheme  Base-16-Gruvbox-Light-Soft.tmTheme  (+81 more)
scripts/: sdefs.txt  stsync.py  tdefs.txt
src/: lib.rs
(+7 files in other folders)
